--- a/infra-platform-frontend/package.json
+++ b/infra-platform-frontend/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.56.1",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.5.2",
+    "react-syntax-highlighter": "^15.6.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
