--- a/infra-platform-frontend/package.json
+++ b/infra-platform-frontend/package.json
@@ -19,16 +19,19 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.9.2",
     "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.5",
     "i18next-http-backend": "^3.0.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.5.2",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
