--- a/llm_service/.env
+++ b/llm_service/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
