--- a/infra-platform-frontend/package.json
+++ b/infra-platform-frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-i18next": "^15.5.1",
+    "react-lottie-player": "^2.1.0",
     "react-router-dom": "^7.5.2",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
