--- a/infra-platform-frontend/package.json
+++ b/infra-platform-frontend/package.json
@@ -23,8 +23,10 @@
     "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.5",
     "i18next-http-backend": "^3.0.2",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-country-flag": "^3.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
