--- a/infra-platform-frontend/package.json
+++ b/infra-platform-frontend/package.json
@@ -23,6 +23,7 @@
     "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.5",
     "i18next-http-backend": "^3.0.2",
+    "moment": "^2.30.1",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
