--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /ainfra_llm_microservice/.env
+/ainfra_availability_microservice/availability_monitor.db
+/ainfra_llm_microservice/data/ainfra_llm_service.db
+/availability_monitor.db
+/infra_platform.db
