Add Docker for Alpha

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,31 @@
 /ainfra_llm_microservice/data/ainfra_llm_service.db
 /availability_monitor.db
 /infra_platform.db
+
+.venv/
+venv/
+env/
+
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+*.db
+*.log
+*.egg-info/
+
+node_modules/
+
+.vscode/
+.idea/
+
+Dockerfile*
+docker-compose*.yml
+
+.git/
+.gitignore
+
+dist/
+build/
+tmp/
